- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.7, 5.8
- 
    None
- 
        e694ced803589b3504b6bdb2fc8bf97bc891c794
The DRIVE CX supports eglfs (DRM+EGLDevice), wayland, and X11 as well.
X11 (xcb+EGL) has not been tested and is reported not to build out of the box, mainly because WIN_INTERFACE_CUSTOM which leads to the non-X11 EGL typedefs (good for eglfs and wayland, not so much for xcb).
Note: Unrelated to Qt, but the X11 headers in current Vibrante have to be patched a bit. Patch for include/X11/extensions/Xge.h attached. include/xcb/* are missing but can simply be copied from a normal distro. After these configuring with -qt-xcb succeeds (but still with EGL on X disabled).