src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_egldevice/eglfs_kms_egldevice.pro
@@ -4,7 +4,8 @@ QT += core-private gui-private platformsupport-private eglfs_device_lib-private 
 
 INCLUDEPATH += $$PWD/../.. $$PWD/../eglfs_kms_support
 
-DEFINES += MESA_EGL_NO_X11_HEADERS
+# Avoid X11 header collision, use generic EGL native types
+DEFINES += QT_EGL_NO_X11
 
 CONFIG += link_pkgconfig
 !contains(QT_CONFIG, no-pkg-config) {
